--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.organization>The Monarch Initiative</project.organization>
         <sonar.language>java</sonar.language>
-        <jannovar.version>0.21</jannovar.version>
+        <jannovar.version>0.23</jannovar.version>
+        <ontolib.version>0.3-SNAPSHOT</ontolib.version>
         <guava.version>21.0</guava.version>
         <spring-boot.version>1.4.1.RELEASE</spring-boot.version>
     </properties>
