--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         <project.organization>The Monarch Initiative</project.organization>
         <sonar.language>java</sonar.language>
         <jannovar.version>0.23</jannovar.version>
-        <ontolib.version>0.3-SNAPSHOT</ontolib.version>
+        <ontolib.version>0.4</ontolib.version>
         <guava.version>21.0</guava.version>
         <spring-boot.version>1.4.1.RELEASE</spring-boot.version>
     </properties>
